--- a/my_serials/templates/base.html
+++ b/my_serials/templates/base.html
@@ -1,5 +1,4 @@
 {% load static %}
-<!--Comments Done-->
 {% load bootstrap4 %}
 {% bootstrap_css %}
 {% bootstrap_javascript jquery='full' %}
@@ -10,15 +9,6 @@
 <head>
   <title>{% block title %}My Serials{% endblock %}</title>
   <link rel="icon" type="image/png" href="{% static 'resources/movie-icon.png' %}">
-  <!--Bootstrap-->
-  <!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">-->
-  <!--    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>-->
-  <!--    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>-->
-  <!--    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>-->
-
-  <!--Fonts-->
-  <!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
-
   <!--Fancybox CSS-->
   <!--  <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
@@ -53,6 +43,11 @@
               </li>
               <li class="nav-item active">
                 <a class="nav-link" href="{% url "my_serials:on_air_today" %}">On Air Today</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="https://t.me/MySerials_IT_Academy_bot">
+                  <img src="{% static 'resources/telegram.svg' %}" width="25" height="25" class="d-inline-block align-top" alt="">
+                </a>
               </li>
             </ul>
             <!--Navbar Dark Mode Switch-->
