--- a/my_serials/templates/registration/edit.html
+++ b/my_serials/templates/registration/edit.html
@@ -12,7 +12,7 @@
       <div class="col-8">
         <form action="." method="post" enctype="multipart/form-data">
           {{ user_form|crispy }}
-<!--         {#   {{ profile_form.as_p }} #}-->
+          {{ profile_form|crispy }}
           {% csrf_token %}
           <div class="row justify-content-center">
             <button type="submit" class="btn btn-success" value="Save Changes">Save Changes</button>
