--- a/my_serials/templates/registration/edit.html
+++ b/my_serials/templates/registration/edit.html
@@ -4,13 +4,14 @@
 
 {% load crispy_forms_tags %}
 
+
 {% block content %}
   <div class="mt-3 mb-3">
     <h2>Edit Profile</h2>
   </div>
     <div class="row justify-content-center">
       <div class="col-8">
-        <form action="." method="post" enctype="multipart/form-data">
+        <form action="." method="post">
           {{ user_form|crispy }}
           {{ profile_form|crispy }}
           {% csrf_token %}
