--- a/my_serials/templates/registration/register_done.html
+++ b/my_serials/templates/registration/register_done.html
@@ -1,6 +1,16 @@
 {% extends "base.html" %}
-{% block title %}created {% endblock %}
+
+{% block title %}Create Account{% endblock %}
+
 {% block content %}
-<p>Hello: {{ new_user.first_name }} </p>
-Now you can <a href="{% url "my_serials:login" %}"> login </a>
+  <div class="mt-3 mb-3">
+    <h2>Account Created</h2>
+  </div>
+  <div class="row justify-content-center">
+    <div class="col-8">
+      <div class="alert alert-success text-center" role="alert">
+        Hello {{ new_user.first_name }}! Now you can <a href="{% url "my_serials:login" %}"> Login</a>
+      </div>
+    </div>
+  </div>
 {% endblock %}
