--- a/my_serials/templates/serial/details.html
+++ b/my_serials/templates/serial/details.html
@@ -11,7 +11,11 @@
   <div class="media">
     <div>
       <div class="text-center">
-        <a data-fancybox="gallery{{ serial.id }}" href="https://image.tmdb.org/t/p/original{{ info.poster_path }}"><img class="align-self-start mr-3" src="https://image.tmdb.org/t/p/w200{{ info.poster_path }}" alt="Generic placeholder image"></a>
+        {% if info.poster_path %}
+          <a data-fancybox="gallery{{ serial.id }}" href="https://image.tmdb.org/t/p/original{{ info.poster_path }}"><img class="align-self-start mr-3" src="https://image.tmdb.org/t/p/w200{{ info.poster_path }}" alt="Generic placeholder image"></a>
+        {% else %}
+          <p><img class="align-self-start mr-3" src="{% static 'resources/no-poster-available.png' %}" width="200px"></p>
+        {% endif %}
       </div>
       <p>
       {% if info.in_production %}
